# efficiently_testing_etl_pipelines

./: .gitignore  .gitpod.yml  README.md  Right_SizingTests.ipynb  diamonds.py  fixing_a_big_test.ipynb  gitpod.yml  poetry.toml  pyproject.toml  setup.sh
efficiencies_of_right_sizing_tests/: README.md
efficiencies_of_right_sizing_tests/src/: build_indep_vars.py  diamond_pricing.py  linear_regression_prep.py  project.py
efficiencies_of_right_sizing_tests/tests/: conftest.py  diamond_pricing_test.py  diamond_pricing_test.test_will_replace_null_prices_with_floating_averages.approved.txt  diamond_pricing_test.test_will_replace_null_prices_with_floating_averages.received.txt  project_test.py  project_test.test_will_replace_null_prices_with_floating_averages.approved.txt  project_test.test_will_replace_null_prices_with_floating_averages.received.txt  test_linear_regression_prep.py
efficiencies_of_right_sizing_tests/tests/fixtures/: diamonds.json  expected.json
efficiencies_of_right_sizing_tests/tests/test_helpers/: json_helpers.py  notebook_verification_helpers.py  verification_helpers.py
efficiencies_of_right_sizing_tests/tests/test_magic_do_not_look/: verification_helpers.py
resources_and_further_reading/: README.md
src/: build_indep_vars.py  linear_regression_prep.py
tests/: diamond_pricing_test.py  test_linear_regression_prep.py
tests/fixtures/: diamonds.json  expected.json  expected_correct.json  expected_correct_with_filter.json
tests/test_helpers/: notebook_verification_helpers.py  verification_helpers.py
virtualenv/: envs.toml
