[tool.poetry]
name = "efficiently-testing-etl-pipelines"
version = "0.1.0"
description = ""
authors = ["jmasonlee <jmasonlee@gmail.com>"]
readme = "README.md"
packages = [{include = "efficiencies_of_right_sizing_tests"}]

[project]
requires-python = "<3.11"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.2"
pyspark = "^3.3.2"
approval-utilities = "^8.2.5"
approvaltests = "^8.2.5"

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "efficiencies_of_right_sizing_tests"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
disable = ["C0103"]
